--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -17,8 +17,8 @@ render_field_with_errors, render_field, render_form_errors, render_field_errors
             Already Registered?
             <a
               href="{{ url_for('security.login') }}"
-              style="text-decoration: none; color: #3fb411"
-              >Login</a
+              style="text-decoration: none; color: #6ab843"
+              ><strong>Login</strong></a
             >
           </p>
         </div>
@@ -57,10 +57,7 @@ render_field_with_errors, render_field, render_form_errors, render_field_errors
               {{ render_field_with_errors(register_user_form.password,
               class="input") }}
             </div>
-            <div>
-              {{ render_field_with_errors(register_user_form.id_number,
-              class="input") }}
-            </div>
+
             <div>
               <div class="d-flex justify-content-center">
                 {{ render_field_errors(register_user_form.csrf_token) }} {{
