--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -57,7 +57,10 @@ render_field_with_errors, render_field, render_form_errors, render_field_errors
               {{ render_field_with_errors(register_user_form.password,
               class="input") }}
             </div>
-
+            <div>
+              {{ render_field_with_errors(register_user_form.confirm_password,
+              class="input") }}
+            </div>
             <div>
               <div class="d-flex justify-content-center">
                 {{ render_field_errors(register_user_form.csrf_token) }} {{
