--- a/app/templates/security/reset_password.html
+++ b/app/templates/security/reset_password.html
@@ -1,16 +1,57 @@
-{% extends "security/base.html" %}
-{% from "security/_macros.html" import render_field_with_errors, render_field, render_field_errors, render_form_errors %}
+{% extends "security/base.html" %} {% from "security/_macros.html" import
+render_field_with_errors, render_field, render_field_errors, render_form_errors
+%} {% block content %}
+<div class="main-container">
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="image-section"></div>
+    </div>
+    <div class="col-lg-6">
+      <div class="head-form">
+        <div class="p-4">
+          <h1>{{ _fsdomain('Reset password') }}</h1>
+        </div>
+        <hr />
+        {% with messages = get_flashed_messages(with_categories=true) %} {% if
+        messages %}
+        <div class="container mt-3" id="flash-container">
+          {% for category, message in messages %}
+          <div
+            class="alert alert-{{ category }} alert-dismissible fade show"
+            role="alert"
+          >
+            {{ message }}
+          </div>
+          {% endfor %}
+        </div>
+        {% endif %} {% endwith %}
+        <form
+          action="{{ url_for_security('reset_password', token=reset_password_token) }}"
+          method="post"
+          name="reset_password_form"
+          novalidate
+        >
+          {{ reset_password_form.hidden_tag() }}
+          <div class="form-section">
+            {{ render_form_errors(reset_password_form) }}
+            <div>
+              {{ render_field_with_errors(reset_password_form.password,
+              class="input") }}
+            </div>
+            <div>
+              {{ render_field_with_errors(reset_password_form.password_confirm,
+              class="input") }}
+            </div>
+            {{ render_field_errors(reset_password_form.csrf_token) }}
+            <div class="d-flex justify-content-center">
+              {{ render_field(reset_password_form.submit,
+              class="confirm-button") }}
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
-{% block content %}
-  {% include "security/_messages.html" %}
-  <h1>{{ _fsdomain('Reset password') }}</h1>
-  <form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="post" name="reset_password_form">
-    {{ reset_password_form.hidden_tag() }}
-    {{ render_form_errors(reset_password_form) }}
-    {{ render_field_with_errors(reset_password_form.password) }}
-    {{ render_field_with_errors(reset_password_form.password_confirm) }}
-    {{ render_field_errors(reset_password_form.csrf_token) }}
-    {{ render_field(reset_password_form.submit) }}
-  </form>
-  {% include "security/_menu.html" %}
 {% endblock content %}
