--- a/app/templates/security/base.html
+++ b/app/templates/security/base.html
@@ -11,7 +11,8 @@
     
       {%- block metas %}
       <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="csrf-token" content="{{ csrf_token() }}">
       {%- endblock metas %}
 
       {%- block head_scripts %}
