--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -40,6 +40,7 @@ prop_next %} {% block title %}Login | TabPay {% endblock %} {% block content %}
           name="login_user_form"
           novalidate
         >
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
           {{ login_user_form.hidden_tag() }} {{
           render_form_errors(login_user_form) }}
 
