--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -40,9 +40,9 @@ prop_next %} {% block title %}Login | TabPay {% endblock %} {% block content %}
           name="login_user_form"
           novalidate
         >
-          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-          {{ login_user_form.hidden_tag() }} {{
-          render_form_errors(login_user_form) }}
+          {{ login_user_form.csrf_token }}
+          {{ login_user_form.hidden_tag() }}
+          {{ render_form_errors(login_user_form) }}
 
           <div class="form-section">
             {% if "email" in identity_attributes %}
