modified:   app/__init__.py         modified:   app/templates/host.html         modified:   config.py

--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -223,7 +223,7 @@ Regular Block Hosting {% endblock %} {% block content %}
                               value="{{ id_meeting }}"
                             />
                             <input type="text" name="host" value="{{ host }}" />
-                            <input
+                            <!-- <input
                               type="text"
                               name="meeting_block"
                               value="{{ meeting_block }}"
@@ -233,7 +233,7 @@ Regular Block Hosting {% endblock %} {% block content %}
                               name="meeting_zone"
                               value="{{ meeting_zone }}"
                             />
-                            <input type="text" name="when" value="{{ when }}" />
+                            <input type="text" name="when" value="{{ when }}" /> -->
 
                             <div class="row">
                               <div class="col-md-6">
