modify configs for development

--- a/app/templates/security/send_confirmation.html
+++ b/app/templates/security/send_confirmation.html
@@ -17,7 +17,7 @@ TabPay {% endblock %} {% block content %}
         <div class="container mt-3" id="flash-container">
           {% for category, message in messages %}
           <div
-            class="alert alert-{{ category }} alert-dismissible fade show"
+            class="alert alert-{{ category }} alert-dismissible fade show bg-warning"
             role="alert"
           >
             {{ message }}
