modified:   app/__init__.py         modified:   app/main/routes.py         modified:   app/templates/host.html         modified:   config.py

--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -222,7 +222,7 @@ Regular Block Hosting {% endblock %} {% block content %}
                               name="meeting_id"
                               value="{{ id_meeting }}"
                             />
-                            <input type="text" name="host" value="{{ host }}" />
+                            <!-- <input type="text" name="host" value="{{ host }}" /> -->
                             <!-- <input
                               type="text"
                               name="meeting_block"
