--- a/app/templates/block_reports.html
+++ b/app/templates/block_reports.html
@@ -70,7 +70,7 @@ block content %}
                  <div class="col-md-3">
                   <select id="host" name="host">
                     <option value="all_hosts">All Hosts</option>
-                    {% for host in hostss %}
+                    {% for host in hosts %}
                     <option value="{{ host.name }}">{{ host.name }}</option>
                     {% endfor %}
                   </select>
